Fixed the position on mobile

--- a/css/gdprwindow.css
+++ b/css/gdprwindow.css
@@ -1,6 +1,6 @@
 #gdprWindow {
     position: fixed;
-    bottom: 110px;
+    bottom: 90px;
     left: 30px;
     width: 250px;
     height: 300px;
@@ -11,13 +11,13 @@
     box-shadow: 0px 0px 8px #e0dbdb;
     display: none;
     padding: 20px;
+    /* filter: blur(5px);
+    user-select: none; */
 }
 #gdprWindow span {
     display: block;
     margin: 0px 0 10px 0;
-    color: #ffffff;
-    background-color: #9797ff;
-    padding: 10px;
+    color: #2050e0;
     border-radius: 5px;
     font-family: "Inter", sans-serif;
     font-weight: bold;
@@ -27,6 +27,7 @@
     padding: 10px 0; 
     font-family: "Inter", sans-serif;
     font-size: 14px;
+    font-weight: 300;
 }
 #cookieTable {
     width: 100%;
